fix cutoff background

--- a/src/App.css
+++ b/src/App.css
@@ -28,6 +28,7 @@
   max-inline-size: var(--measure);
 }
 
+svg,
 html,
 body,
 div,
